--- a/src/main.scss
+++ b/src/main.scss
@@ -1,3 +1,3 @@
 // MAIN SASS FILE. COMPILES ALL SASS FILES INTO A SINGLE ONE
 
-@import 'normalize.scss';
+@import 'normalize.scss' , 'structure.scss' , 'colors.scss', 'fonts.scss';
