--- a/src/fonts.scss
+++ b/src/fonts.scss
@@ -10,14 +10,25 @@ body{
     font-size: 12px;
 }
 
-.testdrive-form-inner input {
+.testdrive-form-inner{
+
+    input {
         font-weight: 500;
         font-size: 14px;
         letter-spacing: 2px;
-}
+    }
+
+    select{
+        font-size: 14px;
+        color: $txt-grey;
+        letter-spacing: 2px;
+        font-weight: 500;
+    }
+} 
 
 .testdrive-title h1 {
     font-size: 15px;
     text-transform: uppercase;
     font-weight: 500;
 }
+
